--- a/Furniture Website/index.html
+++ b/Furniture Website/index.html
@@ -11,7 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-</head>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
+  </head>
 <body>
     <!--Navbar top-->
     <div class="container">
@@ -249,16 +252,37 @@
     </div>
     <!--about-->
     <div class="container">
-      <h1 class="text-center" style="margin-top:50px">About</h1>
+      <h1 class="text-center" style="margin-top:50px">ABOUT</h1>
       <div class="row" style="margin-top:50px;">
         <div class="col-md-6 py-3 py-md-0">
-          <img src="" alt="">
+          <div class="card">
+          <img src="./image/about.jpg" alt="">
         </div>
       </div>
       <div class="col-md-6 py-3 py-md-0">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet velit, omnis non veniam exercitationem sed vel? Totam rerum quibusdam nemo explicabo fuga beatae qui iusto odit vitae, voluptate doloremque repellendus architecto reiciendis temporibus voluptates, omnis expedita excepturi provident ratione! Ad repellat aut illum voluptas corrupti accusamus ullam impedit iste reprehenderit nemo. Dolore repudiandae qui aut vel optio, vitae non impedit facere laborum voluptatum cupiditate necessitatibus neque repellendus doloremque, amet quo commodi itaque voluptate ducimus iusto maxime ipsa reprehenderit sint. Vitae laboriosam quae recusandae labore eveniet sed exercitationem harum nisi placeat tenetur, id enim facilis ipsa excepturi impedit eos necessitatibus quam non maxime iste hic fugiat quia. Corrupti ullam fugiat porro sunt, eligendi amet at, unde magni, veniam dolorum numquam qui repudiandae facilis cum mollitia saepe earum odit aspernatur ea nobis officia cupiditate voluptas. Repellat, magnam, aspernatur quas quaerat qui cumque perferendis dignissimos voluptatibus officia voluptas nam impedit quisquam recusandae.</p>
-        <div id="btn3"><button>Read More....</button></div>
+        <div id="btn4"><button>Read More....</button></div>
       </div>
     </div>
+    </div>
+    <!--footer-->
+    <footer id="footer">
+      <h1 class="text-center">Furniture</h1>
+      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, cum!</p>
+      <div class="icons text-center">
+        <i class="bx bxl-twitter"></i>
+        <i class="bx bxl-facebook"></i>
+        <i class="bx bxl-google"></i>
+        <i class="bx bxl-skype"></i>
+        <i class="bx bxl-instagram"></i>
+
+      </div>
+      <div class="copyright text-center">
+        &copy; copyright <strong><span>Furniture</span></strong>.All Right Reserved
+      </div>
+      <div class="create text-center">
+        Designed By <a href="#">@rutuja</a>
+      </div>
+    </footer>
 </body>
 </html>
